--- a/Views/Blog/AddBlog.cshtml
+++ b/Views/Blog/AddBlog.cshtml
@@ -33,11 +33,10 @@
         color: black !important;
         border-color: black !important;
     }
-
-    .tokenfield {
-        height: auto !important;
+    .tokenfield
+    {
+        height:auto !important;
     }
-
     .panel-heading a {
         font-weight: 400;
         padding: 12px 35px 12px 15px;
@@ -168,7 +167,7 @@
             <!-- sidebar start -->
             <aside class="col-md-5 col-md-offset-1">
                 <div class="sidebar">
-                    <form asp-action="AddBlog" asp-controller="Blog" enctype="multipart/form-data" data-ajax="true" data-ajax-method="POST" novalidate data-ajax-success="OnAddBlogSuccess" data-ajax-begin="return Validate()" id="frmBlog">
+                    <form asp-action="AddBlog" asp-controller="Blog" enctype="multipart/form-data" data-ajax="true" data-ajax-method="POST" novalidate data-ajax-success="OnAddBlogSuccess" data-ajax-begin="return Validate()"  id="frmBlog">
                         <div class="block clearfix">
                             <h3 class="title">Write New Blog</h3>
                             <div class="separator"></div>
@@ -204,14 +203,14 @@
                                         <label for="Visibility">Visibility</label>
                                         <div class="col-md-12 col-sm-12">
                                             <div class="radio" style="float:left">
-                                                <label for="Visibility2">
-                                                    <input type="radio" name="Visibility" @(Model.IsPrivate ? "checked" : "") id="Visibility2" value="Private">
+                                                <label for="Visibility2" >
+                                                    <input type="radio" name="Visibility" @(Model.IsPrivate?"checked":"") id="Visibility2" value="Private">
                                                     Private
                                                 </label>
                                             </div>
                                             <div class="radio" style=" float: left; margin-top: 9px; margin-left: 10px; ">
                                                 <label for="Visibility1">
-                                                    <input type="radio" name="Visibility" @(!Model.IsPrivate ? "checked" : "") id="Visibility1" value="Public">
+                                                    <input type="radio" name="Visibility" @(!Model.IsPrivate?"checked":"") id="Visibility1" value="Public">
                                                     Public
                                                 </label>
                                             </div>
@@ -224,7 +223,7 @@
                             </nav>
                         </div>
                     </form>
-
+                       
                 </div>
             </aside>
         </div>
@@ -306,98 +305,56 @@
 
         }, true);
 
-       //$(".summernote").summernote({
-       //    callbacks: {
-       //        onChange: function (contents, $editable) {
-       //            console.log('onChange:', contents, $editable);
-       //            if (contents == "") {
-       //                $("#blog").hide();
-       //                $("#demoblog").show();
+       $(".summernote").summernote({
+           callbacks: {
+               onChange: function (contents, $editable) {
+                   console.log('onChange:', contents, $editable);
+                   if (contents == "") {
+                       $("#blog").hide();
+                       $("#demoblog").show();
 
-       //            }
-       //            else {
-       //                $('body').append('<div style="display:none;" id="testdiv"></div>');
-       //                var string = "";
-       //                $('div.note-editable').children().each((index, element) => {
-       //                    $('#testdiv').val('');
-       //                    if ($(element).is('pre')) {
-       //                        $('#testdiv').text($(element).find('code').html());
-       //                        string +='<pre><code>'+ $('#testdiv').html()+'</code></pre>';
-       //                    }
-       //                    else {
-       //                        string += $(element).html();
-       //                    }
-       //                });
-       //                $('#testdiv').remove();
-       //                $('#BlogBody').val(string);
-       //                $("#blog").html(string);
-       //                $(".note-editable").html('');
-       //                $(".note-editable").html(string);
+                   }
+                   else {
+                       debugger;
+                       $('body').append('<div style="display:none;" id="testdiv"></div>');
+                       //var string = "";
+                       //$('div.note-editable').children().each((index, element) => {
+                       //    $('#testdiv').val('');
+                       //    if ($(element).is('pre') && $(element).find('code.language-csharp').length==0) {
+                       //        var textArea = document.createElement('textarea');
+                       //        textArea.innerHTML = $(element).find('code').html();
+                         
+                       //        $('#testdiv').text(textArea.value);
+                       //        string +='<pre><code>'+ $('#testdiv').html()+'</code></pre>';
+                       //    }
+                       //    else {
+                       //        string += $(element).html();
+                       //    }
+                       //});
+                       $('#testdiv').remove();
+                       $('#BlogBody').val(contents);
+                       $("#blog").html(contents);
+                      // $(".note-editable").html('');
+                      // $(".note-editable").html(string);
+                     
+                       $("#blog").show();
+                       $("#blogbody").show();
+                       $("#demoblog").hide();
+                   }
 
-       //                $("#blog").show();
-       //                $("#blogbody").show();
-       //                $("#demoblog").hide();
-       //            }
+               },
 
-       //        },
+               onImageUpload: function (files) {
+                   for (let i = 0; i < files.length; i++) {
+                       UploadImage(files[i]);
+                   }
+               }
 
-       //        onImageUpload: function (files) {
-       //            for (let i = 0; i < files.length; i++) {
-       //                UploadImage(files[i]);
-       //            }
-       //        }
-
-       //    }
-       //});
+           }
+       });
 
 
-        $(".summernote").summernote({
-            callbacks: {
-                onChange: function (contents, $editable) {
-                    console.log('onChange:', contents, $editable);
-                    if (contents == "") {
-                        $("#blog").hide();
-                        $("#demoblog").show();
 
-                    }
-                    else {
-                        debugger;
-                        $('body').append('<div style="display:none;" id="testdiv"></div>');
-                        //var string = "";
-                        //$('div.note-editable').children().each((index, element) => {
-                        //    $('#testdiv').val('');
-                        //    if ($(element).is('pre') && $(element).find('code.language-csharp').length==0) {
-                        //        var textArea = document.createElement('textarea');
-                        //        textArea.innerHTML = $(element).find('code').html();
-
-                        //        $('#testdiv').text(textArea.value);
-                        //        string +='<pre><code>'+ $('#testdiv').html()+'</code></pre>';
-                        //    }
-                        //    else {
-                        //        string += $(element).html();
-                        //    }
-                        //});
-                        $('#testdiv').remove();
-                        $('#BlogBody').val(contents);
-                        $("#blog").html(contents);
-                        // $(".note-editable").html('');
-                        // $(".note-editable").html(string);
-
-                        $("#blog").show();
-                        $("#blogbody").show();
-                        $("#demoblog").hide();
-                    }
-
-                },
-
-                onImageUpload: function (files) {
-                    for (let i = 0; i < files.length; i++) {
-                        UploadImage(files[i]);
-                    }
-                }
-
-            }
-        });
    });
    var ChangeTags = function (ctrl) {
        console.log($(ctrl).val());
