--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -203,6 +203,7 @@
                                                 <ul class="dropdown-menu">
                                                     <li><a href="@Url.Action("Index", "JsonBeautifier")">Json Beautifier</a></li>
                                                     <li><a href="@Url.Action("Index", "HtmlBeautifier")">Html Beautifier</a></li>
+                                                    <li><a href="@Url.Action("Index", "Docreader")">Document Viewer</a></li>
                                                 </ul>
                                             </li>
                                             @if (Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == null && string.IsNullOrEmpty(Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext)) || Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == "0")
@@ -315,6 +316,7 @@
                                             <ul class="dropdown-menu">
                                                 <li><a href="@Url.Action("Index", "JsonBeautifier")">Json Beautifier</a></li>
                                                 <li><a href="@Url.Action("Index", "HtmlBeautifier")">Html Beautifier</a></li>
+                                                <li><a href="@Url.Action("Index", "Docreader")">Document Viewer</a></li>
                                             </ul>
                                         </li>
                                         @if (Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == null && string.IsNullOrEmpty(Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext)) || Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == "0")
